--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    developmentOnly 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.+'
 }
 
 tasks.withType(KotlinCompile) {
