--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
 }
 
 dependencies {
+
+    //Spring Security
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
