--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    id 'org.springframework.boot' version '3.0.4'
+    id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.7.22'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.8.22'
 }
 
 group = 'com.example'
@@ -26,7 +26,18 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    developmentOnly 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.+'
+    //developmentOnly 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.+'
+
+    //Permet à JAVA de se connecter à une base SQL
+    //runtimeOnly 'mysql:mysql-connector-j'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+//JPA Framework Java qui génère du SQL
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+//Le validator hibernate
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 }
 
 tasks.withType(KotlinCompile) {
